# world_weaver

./: AGENTS.md  Cargo.toml  Justfile  Neon_Shadows.ron  Readme.md  notes
doc/: architecture.md
engine/: Cargo.toml
engine/src/: game.rs  image_model.rs  lib.rs  llm.rs  save_archive.rs  world_markdown.rs
engine/src/game/: stream_finder.rs  turn_output.rs  turn_stream_processor.rs
engine/src/image_model/: flux2.rs  pruna.rs  replicate.rs
engine/src/image_model/flux2/: flux2_api.rs
engine/src/llm/: claude.rs  open_ai_chat.rs
engine/src/llm/claude/: claude_api.rs
engine/src/llm/claude/claude_api/: error.rs  sse_parser.rs
gui/: Cargo.toml
gui/src/: cli.rs  context.rs  lib.rs  main.rs  message.rs  state.rs  states.rs
gui/src/context/: game_context.rs
gui/src/context/game_context/: pending_turn.rs  state.rs
gui/src/state/: load_menu.rs  main_menu.rs  modal.rs  options_menu.rs  playing.rs  start_new_game.rs  world_editor.rs  world_menu.rs
gui/src/state/modal/: confirm.rs  edit.rs  input.rs  message.rs
gui/src/states/: error.rs  main_menu.rs  modal.rs  playing.rs
gui/src/states/modal/: confirm.rs  edit.rs  error.rs  message.rs
