[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.11.0"
color-eyre = "0.6.5"
indoc = "2.0.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"

[dev-dependencies]
expect-test = "1.5.1"
