[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
indoc = "2.0.7"
log = "0.4.29"
nonempty = { version = "0.12.0", features = ["serialize"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-binary = "0.5.0"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
dirs = "6.0.0"

[dev-dependencies]
expect-test = "1.5.1"
tempfile = "3.24.0"
