[package]
name = "world_weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
engine = { path = "../engine" }

iced = { version = "0.14.0", features = ["markdown", "tokio", "advanced", "debug", "image"] }
log = "0.4.29"
nonempty = { version = "0.12.0", features = ["serialize"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

