[package]
name = "world_weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }

clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["from", "try_into"] }
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["markdown", "tokio", "advanced", "image"] }
indoc = "2.0.7"
log = "0.4.29"
nonempty = { version = "0.12.0", features = ["serialize"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
strum = { version = "0.27.2", features = ["derive"] }
ron = "0.12.0"

